--- a/convertextlibrary/build.gradle
+++ b/convertextlibrary/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
-
 android {
     compileSdkVersion 29
     defaultConfig {
@@ -20,7 +19,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -34,4 +32,29 @@ dependencies {
 }
 repositories {
     mavenCentral()
+}
+
+//从这里开始配置
+apply plugin: 'com.novoda.bintray-release'
+
+publish {
+    repoName="ext"//仓库名 你的仓库名称，没有填写默认仓库是maven//这也是很多人上传仓库不对名问题最多情况，
+    userOrg = 'swallowsonny'      //bintray注册的用户名
+    groupId = 'com.swallowsonny'         //compile引用时的第1部分groupId
+    artifactId = 'convert-ext'     //compile引用时的第2部分项目名
+    publishVersion = '1.0.3'    //compile引用时的第3部分版本号
+    desc = 'Conversion between ByteArray and Basic Types'//项目描述
+    website = 'https://github.com/swallowsonny/ConvertExt' //github 托管地址
+}
+allprojects {
+    repositories {
+        jcenter()
+    }
+    //加上这些
+    tasks.withType(Javadoc) {
+        options{ encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
 }
